implementacion del use del retry + lectura de archivos para peticiones http

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -13,4 +13,5 @@
     <button (click)="updateProduct()" >Editar</button>
     <button (click)="deleteProduct()" >Eliminar</button>
     <button (click)="getRndUser()" >Random</button>
+    <button (click)="getFile()" >File</button>
 </div>
