implementacion descarga de archivos pdf

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -14,4 +14,6 @@
     <button (click)="deleteProduct()" >Eliminar</button>
     <button (click)="getRndUser()" >Random</button>
     <button (click)="getFile()" >File</button>
+    <button (click)="downloadFile()" >downloadFilePDF</button>
+
 </div>
