implementando interceptores a auth

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -6,7 +6,7 @@ footer {
     grid-row-start: 2;
     grid-row-end: 3;
     padding: 50px;
-    height: 150px;
+    height: auto;
     margin-top: 20px;
     background-color: mat-color($primary);
     .box {
